# Devops-Embedded-C-Station

./: .dockerignore  .gitignore  README.md  SETUP_GIT.md
docker/: Dockerfile
projects/template/: .clang-format  .clang-tidy  .cppcheck-suppressions  .cppcheckrc  .gitignore  CMakeLists.txt  Makefile  NOTIFICATIONS.md  README.md
projects/template/.github/workflows/: ci.yml
projects/template/include/: main.h
projects/template/src/: main.c
scripts/: create_project.sh  run_dev_env.sh  test_nested_git.sh
templates/template/: .gitignore  Makefile  README.md
templates/template/.devops/: .dockerignore  Dockerfile  run_dev_env.sh
templates/template/.github/workflows/: ci.yml
templates/template/project/: CMakeLists.txt
templates/template/project/tests/: test_example.c
templates/template/quality/: .clang-format  .clang-tidy  .cppcheck-suppressions
